--- a/morgana/Examples/MOrgAna_workflow_for_advance_python_users.ipynb
+++ b/morgana/Examples/MOrgAna_workflow_for_advance_python_users.ipynb
@@ -24,7 +24,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import packages required\n",
     "import os, glob, shutil\n",
     "from tqdm.notebook import tqdm\n",
     "import numpy as np\n",
@@ -61,7 +60,7 @@
    "outputs": [],
    "source": [
     "# select images for training dataset\n",
-    "start = 0\n",
+    "start = 0 # increase value to exclude starting images in dataset\n",
     "dN = 0 # every dNth image will be used for the training dataset; if dN = 0, random images are taken\n",
     "\n",
     "# True: create one model for all folders; False: create one model for each image subfolder\n",
@@ -79,7 +78,7 @@
    "source": [
     "def initialize_model_folder(folder, dN=30, start=0, combine=True):\n",
     "    \n",
-    "    ### create folders\n",
+    "    # create folders\n",
     "    if combine:\n",
     "        model_folder = os.path.join(os.path.split(folder)[0],'model_')\n",
     "    else:\n",
@@ -91,8 +90,8 @@
     "    trainingset_folder = os.path.join(model_folder,'trainingset')\n",
     "    if not os.path.exists(trainingset_folder):\n",
     "        os.mkdir(trainingset_folder)\n",
-    "    \n",
-    "    ### count images and extract trainingset file names\n",
+    "\n",
+    "    # count images and extract trainingset file names\n",
     "    flist = glob.glob(os.path.join(folder,'*.tif'))\n",
     "    flist.sort()\n",
     "    if dN:\n",
@@ -103,7 +102,7 @@
     "        flist = [flist[i] for i in random_choice]\n",
     "\n",
     "    \n",
-    "    ### copy images to trainingset folder\n",
+    "    # copy images to trainingset folder\n",
     "    for f in flist:\n",
     "        fname = os.path.split(folder)[1] + '_' + os.path.split(f)[-1]\n",
     "        newf = os.path.join(trainingset_folder,fname)\n",
@@ -121,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "541d5df6019a41019368a905c05784bc",
+       "model_id": "1c2681396e9c46aaa6609b0946f862d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,45 +140,117 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "    ### compute parent folder as absolute path\n",
-    "    parent_folder = os.path.abspath(parent_folder)\n",
+    "# compute parent folder as absolute path\n",
+    "parent_folder = os.path.abspath(parent_folder)\n",
     "    \n",
-    "    ### find out all image subfolders in parent_folder\n",
-    "    folder_names = next(os.walk(parent_folder))[1] \n",
+    "# find out all image subfolders in parent_folder\n",
+    "folder_names = next(os.walk(parent_folder))[1] \n",
     "    \n",
-    "    ### exclude folders in exclude_folder\n",
-    "    folder_names = [g for g in folder_names if not g in exclude_folder ]\n",
+    "# exclude folders in exclude_folder\n",
+    "folder_names = [g for g in folder_names if not g in exclude_folder ]\n",
     "\n",
-    "    for folder_name in tqdm(folder_names):\n",
-    "        if not folder_name in exclude_folder:\n",
-    "            folder_path = os.path.join(parent_folder, folder_name)\n",
+    "for folder_name in tqdm(folder_names):\n",
+    "    if not folder_name in exclude_folder:\n",
+    "        folder_path = os.path.join(parent_folder, folder_name)\n",
     "\n",
-    "            ### for every gastruloid, generate model folder and the trainingset\n",
-    "            initialize_model_folder(folder_path, dN=dN, start=start, combine=combine_subfolders)"
+    "        # for the parent_folder/every image subfolder, generate model folder and the trainingset\n",
+    "        initialize_model_folder(folder_path, dN=dN, start=start, combine=combine_subfolders)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 02_create_ground_truth.py\n",
+    "This script creates the binary masks (ground truths) for images copied into the trainingset folder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from morgana.GUIs.manualmask import makeManualMask\n",
+    "from morgana.DatasetTools import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_GT_mask(model_folder):\n",
+    "    \n",
+    "    ### check that model and trainingset exist\n",
+    "    if not os.path.exists(model_folder):\n",
+    "        print('Warning!')\n",
+    "        print(model_folder,':')\n",
+    "        print('Model folder not created! Skipping this subfolder.')\n",
+    "        return\n",
+    "        \n",
+    "    trainingset_folder = os.path.join(model_folder,'trainingset')\n",
+    "    if not os.path.exists(trainingset_folder):\n",
+    "        print('Warning!')\n",
+    "        print(model_folder,':')\n",
+    "        print('Trainingset images not found! Skipping this subfolder.')\n",
+    "        return\n",
+    "\n",
+    "    ### load trainingset images and previously generated ground truth    \n",
+    "    flist_in = io.get_image_list(trainingset_folder, string_filter='_GT', mode_filter='exclude')\n",
+    "    flist_in.sort()\n",
+    "    flist_gt = io.get_image_list(trainingset_folder, string_filter='_GT', mode_filter='include')\n",
+    "    flist_gt.sort()\n",
+    "\n",
+    "    ### if no trainingset images in the folder, skip this gastruloid\n",
+    "    if len(flist_in) == 0:\n",
+    "        print('\\n\\nWarning, no trainingset!','Selected \"'+model_folder+'\" but no trainingset *data* detected. Transfer some images in the \"trainingset\" folder.')\n",
+    "        return\n",
+    "    \n",
+    "    ### if there are more trainingset than ground truth, promptuse to make mask\n",
+    "    if len(flist_in)!=len(flist_gt):\n",
+    "        print('\\n\\nWarning, trainingset incomplete!','Selected \"'+model_folder+'\" but not all masks have been created.\\nPlease provide manually annotated masks.')\n",
+    "\n",
+    "        for f in flist_in:\n",
+    "            fn,ext = os.path.splitext(f)\n",
+    "            mask_name = fn+'_GT'+ext\n",
+    "\n",
+    "            if not os.path.exists(mask_name):\n",
+    "                m = makeManualMask(f,subfolder='',fn=fn+'_GT'+ext,wsize = (2000,2000))\n",
+    "                m.show()\n",
+    "                m.exec()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce679ac96e634182ba7b4a97fcb653fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_folders = glob.glob(os.path.join(parent_folder,'model_*'))\n",
+    "\n",
+    "### compute parent folder as absolute path\n",
+    "model_folders = [os.path.abspath(i) for i in model_folders]\n",
+    "    \n",
+    "for model_folder in tqdm(model_folders):\n",
+    "    create_GT_mask(model_folder)"
+   ]
   },
   {
    "cell_type": "code",
