--- a/morgana/Examples/MOrgAna_workflow_for_advance_python_users.ipynb
+++ b/morgana/Examples/MOrgAna_workflow_for_advance_python_users.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image subfolders found in: /Users/jialelim/Desktop/example_dataset_ipynb/condB\n",
+      "Image subfolders found in: Y:\\Jia_Le_Lim\\morgana_example_datasets\\gastruloids\\condA\n",
       "Path exists! Proceed!\n"
      ]
     }
@@ -48,6 +48,8 @@
     "# select folder containing all image folders to be analysed\n",
     "# parent_folder = os.path.join('test_data','2020-09-22_conditions')\n",
     "parent_folder = os.path.join('/','Users','jialelim', 'Desktop', 'example_dataset_ipynb', 'condB')\n",
+    "parent_folder = os.path.join('Y:',os.sep,'Jia_Le_Lim','morgana_example_datasets','gastruloids','condA')\n",
+    "\n",
     "print('Image subfolders found in: ' + parent_folder)\n",
     "if os.path.exists(parent_folder):\n",
     "    print('Path exists! Proceed!')# check if the path exists"
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,49 +114,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c88a6fc1ad9c419499e44e73abdbde66",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=4.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# compute parent folder as absolute path\n",
-    "parent_folder = os.path.abspath(parent_folder)\n",
+    "# # compute parent folder as absolute path\n",
+    "# parent_folder = os.path.abspath(parent_folder)\n",
     "    \n",
-    "# find out all image subfolders in parent_folder\n",
-    "folder_names = next(os.walk(parent_folder))[1] \n",
+    "# # find out all image subfolders in parent_folder\n",
+    "# folder_names = next(os.walk(parent_folder))[1] \n",
     "    \n",
-    "# exclude folders in exclude_folder\n",
-    "folder_names = [g for g in folder_names if not g in exclude_folder ]\n",
+    "# # exclude folders in exclude_folder\n",
+    "# folder_names = [g for g in folder_names if not g in exclude_folder ]\n",
     "\n",
-    "for folder_name in tqdm(folder_names):\n",
-    "    if not folder_name in exclude_folder:\n",
-    "        folder_path = os.path.join(parent_folder, folder_name)\n",
+    "# for folder_name in tqdm(folder_names):\n",
+    "#     if not folder_name in exclude_folder:\n",
+    "#         folder_path = os.path.join(parent_folder, folder_name)\n",
     "\n",
-    "        # for the parent_folder/every image subfolder, generate model folder and the trainingset\n",
-    "        initialize_model_folder(folder_path, dN=dN, start=start, combine=combine_subfolders)"
+    "#         # for the parent_folder/every image subfolder, generate model folder and the trainingset\n",
+    "#         initialize_model_folder(folder_path, dN=dN, start=start, combine=combine_subfolders)"
    ]
   },
   {
@@ -167,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,11 +157,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_GT_mask(model_folder):\n",
+    "import PyQt5.QtWidgets\n",
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_GT_mask(model_folder, app):\n",
     "    \n",
     "    ### check that model and trainingset exist\n",
     "    if not os.path.exists(model_folder):\n",
@@ -216,25 +206,66 @@
     "            fn,ext = os.path.splitext(f)\n",
     "            mask_name = fn+'_GT'+ext\n",
     "\n",
+    "            \n",
+    "            \n",
     "            if not os.path.exists(mask_name):\n",
+    "                if not PyQt5.QtWidgets.QApplication.instance():\n",
+    "                    app = PyQt5.QtWidgets.QApplication(sys.argv)\n",
+    "                else:\n",
+    "                    app = PyQt5.QtWidgets.QApplication.instance() \n",
     "                m = makeManualMask(f,subfolder='',fn=fn+'_GT'+ext,wsize = (2000,2000))\n",
     "                m.show()\n",
-    "                m.exec()"
+    "                app.exec_()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4afb7a2a205f4c89a261b0b028f85a5e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y:\\Jia_Le_Lim\\morgana_example_datasets\\gastruloids\\condA\\model_\n",
+      "\n",
+      "\n",
+      "Warning, trainingset incomplete! Selected \"Y:\\Jia_Le_Lim\\morgana_example_datasets\\gastruloids\\condA\\model_\" but not all masks have been created.\n",
+      "Please provide manually annotated masks.\n",
+      "Y:\\Jia_Le_Lim\\morgana_example_datasets\\gastruloids\\condA\\model_\\trainingset\\condA_120h_03G.tif\n",
+      "Done with Y:\\Jia_Le_Lim\\morgana_example_datasets\\gastruloids\\condA\\model_\\trainingset\\condA_120h_03G.tif\n",
+      "Y:\\Jia_Le_Lim\\morgana_example_datasets\\gastruloids\\condA\\model_\\trainingset\\condA_120h_03H.tif\n",
+      "Done with Y:\\Jia_Le_Lim\\morgana_example_datasets\\gastruloids\\condA\\model_\\trainingset\\condA_120h_03H.tif\n",
+      "Quitting\n"
+     ]
+    }
+   ],
    "source": [
     "model_folders = glob.glob(os.path.join(parent_folder,'model_*'))\n",
     "\n",
     "### compute parent folder as absolute path\n",
     "model_folders = [os.path.abspath(i) for i in model_folders]\n",
-    "    \n",
+    "\n",
+    "app = PyQt5.QtWidgets.QApplication(sys.argv)\n",
+    "\n",
     "for model_folder in tqdm(model_folders):\n",
-    "    create_GT_mask(model_folder)"
+    "    create_GT_mask(model_folder, app)\n",
+    "\n",
+    "app.quit()"
    ]
   },
   {
@@ -261,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
