--- a/morgana/Examples/MOrgAna_workflow_for_advance_python_users.ipynb
+++ b/morgana/Examples/MOrgAna_workflow_for_advance_python_users.ipynb
@@ -824,7 +824,10 @@
     "## B) Quantification\n",
     "This section makes use of the code from the following scripts:\n",
     "* '07_compute_straighten_morpho_and_fluo.py'\n",
-    "* '08_bra_pole_vs_morpho_midline.py'\n",
+    "* '08_make_plots.py'\n",
+    "\n",
+    "Other plot options:\n",
+    "* '09_bra_pole_vs_morpho_midline.py'\n",
     "\n",
     "### 07_compute_straighten_morpho_and_fluo.py\n",
     "The following code computes morphological parameters based on the binary masks and fluorescence information based on both binary masks and fluorescence channel images. Resulting values are saved and found in 'folder_name_morpho_params.json', 'folder_name_morpho_straight_params.json', 'folder_name_fluo_intensity.json' in the 'result_segmentation' folder in image subfolders."
@@ -844,6 +847,7 @@
     "\n",
     "# select folder containing all image folders to be analysed\n",
     "# parent_folder = os.path.join('test_data','2020-09-22_conditions')\n",
+    "parent_folder = os.path.join('/Volumes','trivedi','Jia_Le_Lim','morgana_example_datasets','gastruloids','condA')\n",
     "print('Image subfolders found in: ' + parent_folder)\n",
     "if os.path.exists(parent_folder):\n",
     "    print('Path exists! Proceed!')# check if the path exists\n",
@@ -976,32 +980,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 08_bra_pole_vs_morpho_midline.py\n",
-    "This script calculates where the GFP (first fluorescent channel) pole is with respect to the pole in the straightened organoid and saves the outputted values in 'Bra_pole_info.json' as well as saves an overview image (angle of pole with straighted organoid) for each organoid in the 'result_segmentation folder' in image subfolder."
+    "### 08_make_plots.py\n",
+    "This script creates overviews and quantitative plots based on morphology and fluorescence information previously computed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image subfolders found in: /Users/jialelim/Desktop/example_dataset_ipynb/condB\n",
-      "Path exists! Proceed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Run cell if starting from 08_bra_pole_vs_morpho_midline.py\n",
+    "# Run cell if starting from 08_make_plots.py\n",
     "import sys, time, tqdm, os, glob\n",
     "from skimage.io import imread, imsave\n",
     "import numpy as np\n",
+    "import PyQt5.QtWidgets\n",
     "\n",
     "# select folder containing all image folders to be analysed\n",
-    "parent_folder = os.path.join('/','Users','jialelim', 'Desktop', 'example_dataset_ipynb', 'condB')\n",
+    "parent_folder = os.path.join('/Volumes','trivedi','Jia_Le_Lim','morgana_example_datasets','gastruloids','condA')\n",
     "print('Image subfolders found in: ' + parent_folder)\n",
     "if os.path.exists(parent_folder):\n",
     "    print('Path exists! Proceed!')# check if the path exists\n",
@@ -1021,7 +1017,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "from morgana.DatasetTools.morphology import overview as overviewDT\n",
+    "from morgana.DatasetTools import arrangemorphodata\n",
+    "from morgana.DatasetTools import arrangefluodata\n",
+    "from collections.abc import Iterable\n",
+    "from morgana.GUIs import visualize0d\n",
+    "from morgana.GUIs import visualize1d\n",
+    "from morgana.GUIs import visualize2d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualization functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Create Composite & Meshgrid Overviews for each image subfolder\n",
+    "for image_folder in image_folders:\n",
+    "    overviewDT.createCompositeOverview(image_folder)\n",
+    "    overviewDT.createMeshgridOverview(image_folder)\n",
+    "    parent,cond = os.path.split(image_folder)\n",
+    "    text = 'Composite and Meshgrid files saved at:' + '\\n\\t'+ os.path.join(os.path.split(parent)[-1],'result_segmentation', cond)\n",
+    "    print('Completed successfully. ' + text)\n",
+    "print('All overviews created.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Morphology Quantification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Select morphological parameters to be quantified\n",
+    "\n",
+    "maskType = 'Unprocessed' # Use 'Unprocessed' or 'Straightened' binary mask\n",
+    "Timelapse = False # Do images in the folder belong to a timelapse?\n",
+    "\n",
+    "all_morpho_params = True # select true if all parameters are to be used.\n",
+    "# otherwise, select which paramters you would like to compute.\n",
+    "area = False\n",
+    "eccentricity = False\n",
+    "major_axis_length = False\n",
+    "minor_axis_length = False\n",
+    "equivalent_diameter = False\n",
+    "perimeter = False\n",
+    "euler_number = False\n",
+    "extent = False\n",
+    "form_factor = False\n",
+    "orientation = False\n",
+    "locoefa_coeff = True\n",
+    "\n",
+    "# Define number of groups/number of conditions and the image subfolders that belong to each group\n",
+    "group1 = [image_folders[0], image_folders[1]]\n",
+    "group2 = [image_folders[2]]\n",
+    "group3 = [image_folders[3]]\n",
+    "\n",
+    "groups = [group1, group2, group3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Show plots\n",
+    "%matplotlib qt\n",
+    "\n",
+    "morphoKeys = ['area',\n",
+    "              'eccentricity',\n",
+    "              'major_axis_length',\n",
+    "              'minor_axis_length',\n",
+    "              'equivalent_diameter',\n",
+    "              'perimeter',\n",
+    "              'euler_number',\n",
+    "              'extent',\n",
+    "              'form_factor',\n",
+    "              'orientation',\n",
+    "              'locoefa_coeff']\n",
+    "\n",
+    "if all_morpho_params:\n",
+    "    computeMorpho = [True for key in morphoKeys]\n",
+    "else:\n",
+    "    computeMorpho = [area, eccentricity, major_axis_length, minor_axis_length, equivalent_diameter, \n",
+    "                     perimeter, euler_number, extent, form_factor, orientation, locoefa_coeff]\n",
+    "    \n",
+    "# extract data from all the folders\n",
+    "data_all, keys = arrangemorphodata.collect_morpho_data( groups, \n",
+    "                                                        morphoKeys, \n",
+    "                                                        computeMorpho, \n",
+    "                                                        maskType, \n",
+    "                                                        Timelapse\n",
+    "                                                        )\n",
+    "quantifier = []\n",
+    "app = PyQt5.QtWidgets.QApplication(sys.argv)\n",
+    "\n",
+    "# for every quantification parameter, make the appropriate plot\n",
+    "for key in keys:\n",
+    "    data_key = [data[key] for data in data_all]\n",
+    "\n",
+    "    # find out number of dimensions of the data_key object by going deeper in the object\n",
+    "    # and checking if the first item of layer n is iterable\n",
+    "    iterable = True\n",
+    "    ndim = 0\n",
+    "    first_object = data_key[0][0]\n",
+    "    while iterable:\n",
+    "        iterable = isinstance(first_object, Iterable)\n",
+    "        if iterable:\n",
+    "            ndim += 1\n",
+    "            first_object = first_object[0]\n",
+    "    \n",
+    "    if not PyQt5.QtWidgets.QApplication.instance():\n",
+    "        app = PyQt5.QtWidgets.QApplication(sys.argv)\n",
+    "    else:\n",
+    "        app = PyQt5.QtWidgets.QApplication.instance() \n",
+    "        \n",
+    "    # call the right visualization tool according to the number of dimensions\n",
+    "    ### clean up quantifier handler:\n",
+    "    quantifier = [quantifier[i] for i in range(len(quantifier)) if quantifier[i] is not None]\n",
+    "\n",
+    "    if ndim == 0:\n",
+    "        quantifier.append( visualize0d.visualization_0d( data_key, key ) )\n",
+    "        quantifier[-1].show()\n",
+    "    elif ndim == 1:\n",
+    "        quantifier.append( visualize1d.visualization_1d( data_key, key ) )\n",
+    "        quantifier[-1].show()\n",
+    "    elif ndim == 2:\n",
+    "        quantifier.append( visualize2d.visualization_2d( data_key, key ) )\n",
+    "        quantifier[-1].show()\n",
+    "    app.exec()\n",
+    "app.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fluorescence Quantification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Select parameters for fluorescence quantification\n",
+    "\n",
+    "channel = 1 # number of fluorescence channel in order of channels in tif file.\n",
+    "Timelapse = False # Do images in the folder belong to a timelapse?\n",
+    "distribution = 'ANGprofile' # choice of profile: 'Average','APprofile','LRprofile','RADprofile','ANGprofile'\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Define number of groups/number of conditions and the image subfolders that belong to each group\n",
+    "group1 = [image_folders[0], image_folders[1]]\n",
+    "group2 = [image_folders[2]]\n",
+    "group3 = [image_folders[3]]\n",
+    "\n",
+    "groups = [group1, group2, group3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Show plots\n",
+    "distributionType = ['Average','APprofile','LRprofile','RADprofile','ANGprofile']\n",
+    "distributionType = distributionType[distributionType.index(distribution)]\n",
+    "\n",
+    "# extract data from all the folders\n",
+    "data_all = arrangefluodata.collect_fluo_data(groups, \n",
+    "                                             channel, \n",
+    "                                             distributionType, \n",
+    "                                             Timelapse)\n",
+    "\n",
+    "# if the result is None, something went wrong!\n",
+    "if not data_all:\n",
+    "    print('Warning, invalid channel!','The channel selected doesn\\'t appear in the raw data!')\n",
+    "\n",
+    "# make the appropriate plot\n",
+    "data_key = [data['ch%d_%s'%(channel,distributionType)] for data in data_all]\n",
+    "data_bckg = [data['ch%d_Background'%(channel)] for data in data_all]\n",
+    "\n",
+    "# find out number of dimensions of the data_key object by going deeper in the object\n",
+    "# and checking if the first item of layer n is iterable\n",
+    "iterable = True\n",
+    "ndim = 0\n",
+    "first_object = data_key[0][0]\n",
+    "while iterable:\n",
+    "    iterable = isinstance(first_object, Iterable)\n",
+    "    if iterable:\n",
+    "        ndim += 1\n",
+    "        first_object = first_object[0]\n",
+    "\n",
+    "# call the right visualization tool according to the number of dimensions\n",
+    "### clean up quantifier handler:\n",
+    "quantifier = [quantifier[i] for i in range(len(quantifier)) if quantifier[i] is not None]\n",
+    "\n",
+    "if ndim == 0:\n",
+    "    quantifier.append( visualize0d.visualization_0d( data_key, distributionType, background=data_bckg ) )\n",
+    "    quantifier[-1].show()\n",
+    "elif ndim == 1:\n",
+    "    quantifier.append( visualize1d.visualization_1d( data_key, distributionType, background=data_bckg ) )\n",
+    "    quantifier[-1].show()\n",
+    "elif ndim == 2:\n",
+    "    quantifier.append( visualize2d.visualization_2d( data_key, distributionType, background=data_bckg ) )\n",
+    "    quantifier[-1].show()\n",
+    "    w = inspection.inspectionWindow_20max(\n",
+    "            image_folder, \n",
+    "            parent=None, \n",
+    "            start=0, \n",
+    "            stop=20\n",
+    "            )\n",
+    "    w.show()\n",
+    "    app.exec()\n",
+    "app.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 09_bra_pole_vs_morpho_midline.py\n",
+    "This script calculates where the GFP (first fluorescent channel) pole is with respect to the pole in the straightened organoid and saves the outputted values in 'Bra_pole_info.json' as well as saves an overview image (angle of pole with straighted organoid) for each organoid in the 'result_segmentation folder' in image subfolder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run cell if starting from 09_bra_pole_vs_morpho_midline.py\n",
+    "import sys, time, tqdm, os, glob\n",
+    "from skimage.io import imread, imsave\n",
+    "import numpy as np\n",
+    "\n",
+    "# select folder containing all image folders to be analysed\n",
+    "# parent_folder = os.path.join('test_data','2020-09-22_conditions')\n",
+    "print('Image subfolders found in: ' + parent_folder)\n",
+    "if os.path.exists(parent_folder):\n",
+    "    print('Path exists! Proceed!')# check if the path exists\n",
+    "\n",
+    "# find out all image subfolders in parent_folder\n",
+    "folder_names = next(os.walk(parent_folder))[1] \n",
+    "\n",
+    "model_folders = glob.glob(os.path.join(parent_folder,'model_*'))\n",
+    "model_folders_name = [os.path.split(model_folder)[-1] for model_folder in model_folders]\n",
+    "\n",
+    "# exclude folders in exclude_folder\n",
+    "exclude_folder = ['']\n",
+    "\n",
+    "image_folders = [g for g in folder_names if not g in model_folders_name + exclude_folder]\n",
+    "image_folders = [os.path.join(parent_folder, i) for i in image_folders]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,21 +1329,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------/Users/jialelim/Desktop/example_dataset_ipynb/condB/condB_72h------------\n",
-      "-------------/Users/jialelim/Desktop/example_dataset_ipynb/condB/condB_48h------------\n",
-      "-------------/Users/jialelim/Desktop/example_dataset_ipynb/condB/condB_96h------------\n",
-      "-------------/Users/jialelim/Desktop/example_dataset_ipynb/condB/condB_120h------------\n",
-      "Polarity computed. For further graphs, please use the GUI.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### compute parent folder as absolute path\n",
     "parent_folder = os.path.abspath(parent_folder)\n",
@@ -1083,7 +1349,6 @@
     "        df_morpho = ioMorph.load_morpho_params(save_folder, image_folder)\n",
     "        df_straight = ioStr.load_straight_morpho_params(save_folder, image_folder)\n",
     "        df_fluo = ioFluo.load_fluo_info( save_folder, image_folder)\n",
-    "        print(df_fluo.ch1_ANGprofile)\n",
     "\n",
     "        N_img = len(df_morpho.input_file)\n",
     "\n",
@@ -1250,8 +1515,15 @@
     "                        })   \n",
     "\n",
     "        data.to_json(bra_fname)\n",
-    "print('Polarity computed. For further graphs, please use the GUI.')"
+    "print('Polarity computed. Images and Bra_pole_info.json saved in result_segmentation folder.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
