--- a/morgana/Examples/MOrgAna_workflow_for_advance_python_users.ipynb
+++ b/morgana/Examples/MOrgAna_workflow_for_advance_python_users.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "# select folder containing all image folders to be analysed\n",
     "# parent_folder = os.path.join('test_data','2020-09-22_conditions')\n",
-    "parent_folder = os.path.join('/','Users','jialelim', 'Desktop', 'example_dataset_ipynb', 'condA')\n",
+    "parent_folder = os.path.join('/','Volumes','trivedi', 'Jia_Le_Lim', 'morgana_example_datasets', 'gastruloids_ipynb', 'condB')\n",
     "# parent_folder = os.path.join('Y:',os.sep,'Jia_Le_Lim','morgana_example_datasets','gastruloids','condA')\n",
     "print('Image subfolders found in: ' + parent_folder)\n",
     "if os.path.exists(parent_folder):\n",
@@ -62,7 +62,7 @@
    "source": [
     "# select images for training dataset\n",
     "start = 0 # increase value to exclude starting images in dataset\n",
-    "dN = 10 # every dNth image will be used for the training dataset; if dN = 0, random images are taken\n",
+    "dN = 0 # every dNth image will be used for the training dataset; if dN = 0, random images are taken\n",
     "\n",
     "# True: create one model for all folders; False: create one model for each image subfolder\n",
     "combine_subfolders = True\n",
@@ -155,6 +155,7 @@
     "\n",
     "# select folder containing all image folders to be analysed\n",
     "# parent_folder = os.path.join('test_data','2020-09-22_conditions')\n",
+    "parent_folder = os.path.join('/','Volumes','trivedi', 'Jia_Le_Lim', 'morgana_example_datasets', 'gastruloids_ipynb', 'condB')\n",
     "print('Image subfolders found in: ' + parent_folder)\n",
     "if os.path.exists(parent_folder):\n",
     "    print('Path exists! Proceed!')# check if the path exists"
@@ -262,6 +263,7 @@
     "\n",
     "# select folder containing all image folders to be analysed\n",
     "# parent_folder = os.path.join('test_data','2020-09-22_conditions')\n",
+    "parent_folder = os.path.join('/','Volumes','trivedi', 'Jia_Le_Lim', 'morgana_example_datasets', 'gastruloids_ipynb', 'condB')\n",
     "print('Image subfolders found in: ' + parent_folder)\n",
     "if os.path.exists(parent_folder):\n",
     "    print('Path exists! Proceed!')# check if the path exists\n",
@@ -294,8 +296,8 @@
     "edge_size = 5\n",
     "pxl_extract_fraction = 0.25\n",
     "pxl_extract_bias = 0.4\n",
-    "feature_type = 'ilastik' # or 'ilastik'\n",
-    "deep = False # True: deep learning with Multi Layer Perceptrons; False: Logistic regression"
+    "feature_type = 'ilastik' # 'daisy' or 'ilastik'\n",
+    "deep = True # True: deep learning with Multi Layer Perceptrons; False: Logistic regression"
    ]
   },
   {
@@ -413,14 +415,14 @@
     "\n",
     "# select folder containing all image folders to be analysed\n",
     "# parent_folder = os.path.join('test_data','2020-09-22_conditions')\n",
-    "\n",
+    "parent_folder = os.path.join('/','Volumes','trivedi', 'Jia_Le_Lim', 'morgana_example_datasets', 'gastruloids_ipynb', 'condB')\n",
     "print('Image subfolders found in: ' + parent_folder)\n",
     "if os.path.exists(parent_folder):\n",
     "    print('Path exists! Proceed!')# check if the path exists\n",
     "\n",
     "# add folders that you want to ignore here\n",
     "exclude_folder = []\n",
-    "deep = False # True: deep learning with Multi Layer Perceptrons; False: Logistic regression"
+    "deep = True # True: deep learning with Multi Layer Perceptrons; False: Logistic regression"
    ]
   },
   {
@@ -525,6 +527,7 @@
     "\n",
     "# select folder containing all image folders to be analysed\n",
     "# parent_folder = os.path.join('test_data','2020-09-22_conditions')\n",
+    "\n",
     "print('Image subfolders found in: ' + parent_folder)\n",
     "if os.path.exists(parent_folder):\n",
     "    print('Path exists! Proceed!')# check if the path exists\n",
@@ -1044,7 +1047,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "### Create Composite & Meshgrid Overviews for each image subfolder\n",
@@ -1516,6 +1521,15 @@
     "\n",
     "        data.to_json(bra_fname)\n",
     "print('Polarity computed. Images and Bra_pole_info.json saved in result_segmentation folder.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(parent_folder)"
    ]
   },
   {
